--- a/customer_segments/customer_segments.html
+++ b/customer_segments/customer_segments.html
@@ -25941,7 +25941,7 @@ Name: Explained Variance, dtype: float64</pre>
       These features best represent PC2.
 
   3.3 The third Principal compenent (PC3):
-      The third Component highly correlate with "Milk", "Frozen" and "Deli" and less correlate with "Fresh", "Grocery",      
+      The third Component highly correlate with "Milk", "Frozen", "Deli", "Fresh" and less correlate with , "Grocery",      
       "Detergents_Paper".
       These features best represent PC3.
 
